# Reproducible-Research-Project

./: Dockerfile  README.md  RR_Project.ipynb  code_VAR_crypto.R  docker-compose.yml  pyproject.toml  requirements.txt
crypto_var/: data.py  forecast.py  model.py
src/rr_project/: data_stationarity.py
